[project]
name = "realstate-skiptrace-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Ramos",email = "89560965+ViniciusARZ@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
